fix bugs and content overflow

--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -24,7 +24,7 @@ body {
   min-height: 100%;
   margin: 0;
   color: var(--black);
-  background-color: var(--white);
+  background-color: var(--gray-200);
 }
 
 input,
@@ -59,4 +59,5 @@ input[type="radio"].visually-hidden {
   margin-inline: auto;
   mix-blend-mode: normal;
   box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+  background-color: var(--white);
 }
